--- a/NNFL.ipynb
+++ b/NNFL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "NNFL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMJjzsZHfpn7Dzb0ff5LevU",
+      "authorship_tag": "ABX9TyO8pLZCmnLa0i0AJDlCXBlb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1656,12 +1656,134 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YPjc1aFW-HlV"
+        "id": "r6gVtoEBRdSU"
       },
       "source": [
-        ""
+        "def sigmoid(x, theta):\n",
+        "    z= np.dot(x, theta)\n",
+        "    return 1/(1+np.exp(-z))\n",
+        "\n",
+        "def hypothesis(theta, x):\n",
+        "    return sigmoid(x, theta)\n",
+        "\n",
+        "def cost_function(theta, x, y):\n",
+        "    m = x.shape[0]\n",
+        "    h = hypothesis(theta, x)\n",
+        "    return -(1/m)*np.sum(y*np.log(h) + (1-y)*np.log(1-h))\n",
+        "\n",
+        "def gradient(theta, x, y):\n",
+        "    m = x.shape[0]\n",
+        "    h = hypothesis(theta, x)\n",
+        "    return (1/m) * np.dot(x.T, (h-y))"
       ],
-      "execution_count": 19,
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YPjc1aFW-HlV",
+        "outputId": "4bd5d675-125f-4890-e0df-b9cafd27464d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 151
+        }
+      },
+      "source": [
+        "data4 = np.array(pd.read_csv(\"https://raw.githubusercontent.com/Pnsahu94/Neural-Nets-and-Fuzzy-Logic-Assgnment-1/master/data4.csv\" , header= None))\n",
+        "data4 = np.concatenate((np.ones(shape = (data4.shape[0],1)),data4) ,axis = 1)\n",
+        "data4 = pd.DataFrame(data4)\n",
+        "\n",
+        "#Normalization\n",
+        "data4.iloc[ :,1:-1] = (data4.iloc[ :,1:-1] - data4.iloc[ :,1:-1].mean()) / data4.iloc[ :,1:-1].std()\n",
+        "\n",
+        "data_train = data4.sample(frac=0.6 , random_state= 1)\n",
+        "data_test = data4.drop(data_train.index)\n",
+        "\n",
+        "X_train = np.array(data_train.iloc[:,:-1])\n",
+        "Y_train = np.array(data_train.iloc[:,-1]).reshape((-1, 1)) \n",
+        "\n",
+        "X_test = np.array(data_test.iloc[:,:-1])\n",
+        "Y_test = np.array(data_test.iloc[:,-1]).reshape((-1, 1))\n",
+        "\n",
+        "def One_All_Classifier(X , Y , iteration = 5000 ,learning_rate = 0.005):\n",
+        "  theta_list = []\n",
+        "  for i in np.unique(Y):\n",
+        "    theta = np.random.random((X.shape[1],1))\n",
+        "    temp = np.where(Y==i , 1 ,0)\n",
+        "    w = np.zeros([X.shape[1],1])\n",
+        "    for j in range(iteration):\n",
+        "      grad = gradient(theta, X, Y)\n",
+        "      theta = theta - learning_rate * grad\n",
+        "    theta_list.append(theta)\n",
+        "\n",
+        "  return np.array(theta)\n",
+        "\n",
+        "theta_list = One_All_Classifier(X_train,Y_train)\n",
+        "print(\"Final weights obatined are:\",theta_list)"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Final weights obatined are: [[34.41502427]\n",
+            " [11.22210492]\n",
+            " [ 0.64796797]\n",
+            " [10.1436304 ]\n",
+            " [11.18673795]\n",
+            " [12.12626702]\n",
+            " [ 1.10913705]\n",
+            " [10.7480022 ]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NozbVSUBRRfO"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "def predict(test_X,w):\n",
+        "  y_pred=np.zeros(test_X.shape[0])\n",
+        "  w=w.T\n",
+        "  for i in range(test_X.shape[0]):\n",
+        "    max=-1000\n",
+        "    for j in range(w.shape[1]):\n",
+        "      sig=sigmoid(test_X[i,:],w[:,j])\n",
+        "      if(max<sig):\n",
+        "        max=sig\n",
+        "        y_pred[i]=(j+1)\n",
+        "\n",
+        "  return y_pred\n",
+        "\n",
+        "w_all=train_func(train_X,train_y,3000,0.005)\n",
+        "w_all=np.array(w_all)\n",
+        "w_all=w_all.reshape(3,8)\n",
+        "print(\"Final weights obatined are:\",w_all)\n",
+        "\n",
+        "confusion_matrix = pd.crosstab(test_y, y_pred)\n",
+        "print('Confusion Matrix is\\n',confusion_matrix)\n",
+        "\n",
+        "confusion_matrix=np.array(confusion_matrix)\n",
+        "row_sum=0.0\n",
+        "all_sum=0.0\n",
+        "diag_sum=0.0\n",
+        "for i in range(confusion_matrix.shape[0]):\n",
+        "  row_sum=np.sum(confusion_matrix[i,:])\n",
+        "  all_sum +=row_sum\n",
+        "  acc=np.round(confusion_matrix[i,i]/row_sum,5)\n",
+        "  diag_sum+=confusion_matrix[i,i]\n",
+        "  print(\"Accuracy for class \"+str(i+1)+\" is\",acc)\n",
+        "\n",
+        "ov_acc=np.round((diag_sum/all_sum),5)\n",
+        "print(\"Overall Accuracy for the model is\",ov_acc)"
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
