--- a/NNFL.ipynb
+++ b/NNFL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "NNFL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN33PbtTcK1TJkjruML/DZc",
+      "authorship_tag": "ABX9TyOjhlGR3P5K5Q5OUO6+gBhB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -704,6 +704,7 @@
         "plt.ylabel(\"Cost\")\n",
         "plt.xlabel(\"Number of Iterations\")\n",
         "plt.legend()\n",
+        "plt.show()\n",
         "\n",
         "# (b) Plotting Cost vs W1 vs W2\n",
         "ax = plt.axes(projection ='3d')\n",
@@ -808,6 +809,7 @@
         "plt.ylabel(\"Cost\")\n",
         "plt.xlabel(\"Number of Iterations\")\n",
         "plt.legend()\n",
+        "plt.show()\n",
         "\n",
         "# (b) Plotting Cost vs W1 vs W2\n",
         "ax = plt.axes(projection ='3d')\n",
@@ -927,6 +929,7 @@
         "plt.ylabel(\"Cost\")\n",
         "plt.xlabel(\"Number of Iterations\")\n",
         "plt.legend()\n",
+        "plt.show()\n",
         "\n",
         "# (b) Plotting Cost vs W1 vs W2\n",
         "ax = plt.axes(projection ='3d')\n",
@@ -1034,6 +1037,7 @@
         "plt.ylabel(\"Cost\")\n",
         "plt.xlabel(\"Number of Iterations\")\n",
         "plt.legend()\n",
+        "plt.show()\n",
         "\n",
         "# (b) Plotting Cost vs W1 vs W2\n",
         "ax = plt.axes(projection ='3d')\n",
@@ -1138,6 +1142,7 @@
         "plt.ylabel(\"Cost\")\n",
         "plt.xlabel(\"Number of Iterations\")\n",
         "plt.legend()\n",
+        "plt.show()\n",
         "\n",
         "# (b) Plotting Cost vs W1 vs W2\n",
         "ax = plt.axes(projection ='3d')\n",
@@ -2405,6 +2410,40 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SdXWOuuhMpgb"
+      },
+      "source": [
+        "**13. Please write in your own words that what you have learned by solving the Assignment**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AZ-hTlk_M0Hh"
+      },
+      "source": [
+        "\n",
+        "Practical Implementation of the following:-\n",
+        "1. Working with Pandas library for importing data, numpy library for math and array operations, and matplotlib for plotting\n",
+        "2. Linear regression algorithm, Analysis of the cost function and its relation with the weight parameters\n",
+        "3. Linear regression using stochastic and batch gradient descent methods\n",
+        "4. Least Angle Regression for Batch Gradient Descent , mini batch gradient descent and stochastic gradient descent\n",
+        "5. Ridge Regression for Batch Gradient Descent , mini batch gradient descent and stochastic gradient descent\n",
+        "6. Vectorized implementation of linear regression , Ridge Regression and least angle regression methods\n",
+        "7. Implementation of the unsupervised algorithm K-means Clustering and analysis of unsupervised learning algorithm\n",
+        "8. Logistic regression of classification problems\n",
+        "9. ‘’One vs all’’ and ‘’one vs one’’ algorithms for multiclass classification\n",
+        "10. Hold out cross validation and K-fold cross validation\n",
+        "11. Importance of Confusion matrix, accuracy, sensitivity and specificity for measuring the performance of a classification algorithm\n",
+        "12. Probabilistic classifiers ( LRT, MAP and ML )\n",
+        "113. We have seen that regularization methods were able to produce a lower value of cost function for a given number of iterations\n",
+        "14. Stochastic gradient descent method produced a noisy cost plot when compared to batch gradient descent method\n",
+        "15. Probabilistic classifiers are able to produce comparable results to logistic regression based methods in a lower amount of processing time\n"
       ]
     },
     {
