--- a/NNFL.ipynb
+++ b/NNFL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "NNFL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOjhlGR3P5K5Q5OUO6+gBhB",
+      "authorship_tag": "ABX9TyN3pD7yfkQbhezKAJjY5G0n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1694,6 +1694,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OCPOiPK-RIN0"
+      },
+      "source": [
+        "**One vs All**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "r6gVtoEBRdSU"
@@ -1818,6 +1827,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lVoO5IE6RLtu"
+      },
+      "source": [
+        "**One vs One**"
       ]
     },
     {
