--- a/NNFL.ipynb
+++ b/NNFL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "NNFL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMffTbHWsLlFOMvuYMwkG9p",
+      "authorship_tag": "ABX9TyPniBm/YBrgoBt6qHZ8Gosb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,6 +22,16 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Pnsahu94/Neural-Nets-and-Fuzzy-Logic-Assgnment-1/blob/master/NNFL.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "abuyMl2NaqMZ"
+      },
+      "source": [
+        "**Name = Pratyush Nath Sahu   \n",
+        "ID - 2018A3PS0620H**"
       ]
     },
     {
